# jobscout

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  turbo.json
.claude-plugin/: marketplace.json
.flox/: env.json
.flox/env/: manifest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
crates/joblode-core/src/: lib.rs
crates/joblode-core/tests/: search.rs
crates/joblode-rank/: Cargo.toml
crates/joblode-rank/src/: embed.rs  gemini.rs  lib.rs  model.rs  pairwise.rs  taste.rs
crates/joblode-server/: Cargo.toml
crates/joblode-server/src/: app_ui.rs  dto.rs  http.rs  main.rs  mcp.rs  ranking.rs  semantic.rs
crates/joblode-server/tests/: http_transport.rs
crates/jobscout-core/: Cargo.toml
crates/jobscout-core/src/: lib.rs
crates/jobscout-server/: Cargo.toml
crates/jobscout-server/src/: main.rs
docs/: DESIGN.md  FRONTEND.md  MCP.md  ORCHESTRATION.md
plugins/joblode/: .mcp.json  README.md
plugins/joblode/.claude-plugin/: plugin.json
plugins/joblode/commands/: job-search.md
plugins/joblode/skills/job-search/: SKILL.md
testdata/: rank_fixture.parquet
web/: index.html  package.json  tsconfig.json  vite.config.app.ts  vite.config.ts
web/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  lib.test.ts  lib.ts  main.tsx  test-setup.ts  types.ts
web/src/components/: FilterSidebar.test.tsx  FilterSidebar.tsx  JobDrawer.tsx  RankPanel.test.tsx  RankPanel.tsx  ResultsTable.test.tsx  ResultsTable.tsx
