[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/conglei/joblode"
authors = ["Conglei Shi"]

[workspace.dependencies]
joblode-core = { path = "crates/joblode-core", version = "0.1.0" }
joblode-rank = { path = "crates/joblode-rank", version = "0.1.0" }

# Keep release builds lean and fast to link for a locally-run binary.
[profile.release]
lto = "thin"
strip = true
