[package]
name = "joblode-rank"
description = "Config-gated ranking for joblode: a keyless embedding/feedback ranker plus optional cheap-model refinement."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
