[package]
name = "joblode-server"
description = "axum HTTP + SSE + MCP server for joblode."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "joblode-server"
path = "src/main.rs"

[dependencies]
joblode-core = { workspace = true }
joblode-rank = { workspace = true }
rmcp = { version = "1.7", features = [
    "server",
    "client",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
] }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "io-std",
    "io-util",
    "net",
    "signal",
    "sync",
] }
tokio-util = "0.7"
axum = "0.8"
# Static serving for the bundled React build (web/dist) with an SPA fallback;
# `trace` adds the HTTP request/response TraceLayer (method, path, status, latency).
tower-http = { version = "0.7", features = ["fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
# Loads a gitignored `.env` at startup so keys needn't be re-exported each run.
dotenvy = "0.15"
# Structured logging: `tracing` for instrumentation, `tracing-subscriber` for the
# stderr fmt subscriber filtered by `RUST_LOG` (env-filter).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# External job-search source (SearchAPI / Google Jobs): HTTP + a stable cross-source
# id (sha256 of the apply URL), URL cleaning, and relative-date parsing.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
sha2 = "0.11"
url = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
# SIGINT the spawned server so it shuts down gracefully (and flushes coverage).
libc = "0.2"
# `oneshot` the API router in handler tests without binding a socket.
tower = { version = "0.5", features = ["util"] }
# Implement the rank ModelClient trait with a deterministic fake in tests.
async-trait = "0.1"
